# doctown-v5

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE_UPDATED.md  CHANGELOG.md  COMBINED_CONTAINER_UPDATE.md  CPU_REVERSION_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEV_SETUP.md  Dockerfile.combined  EMBEDDING_BATCH_FIX.md  EMBEDDING_INTEGRATION.md  M2.1_COMPLETED.md  M2.2_COMPLETED.md  M3.2_COMPLETED.md  MEMORY_MANAGEMENT.md  R2_STORAGE_IMPLEMENTATION.md  README.md  RUNPOD_DEPLOYMENT_UPDATED.md  RUNPOD_SETUP.md  SERVERLESS_FRONTEND_CHANGES.md  SERVERLESS_MIGRATION.md  SETUP_COMPLETE.md  SETUP_R2_STORAGE.md  TODO.md  build-combined.sh  clippy.toml  dev-full.sh  dev.sh  rustfmt.toml  start-combined.sh  stop.sh  test-combined.sh  test-embedding-integration.sh  vercel.json
.github/workflows/: rust.yml
builder/: .env.serverless.example  Cargo.toml  Dockerfile  Dockerfile.serverless  README.md  build-serverless.sh  build.sh  deploy.sh  handler.py  handler_serverless.py  smoke-test.sh  start-server.sh  test-health.sh  test-local.sh  test-runpod.sh  test-serverless-local.sh
builder/src/: main.rs
crates/doctown-assembly/: Cargo.toml  README.md  test-api.sh
crates/doctown-assembly/examples/: graph_demo.rs
crates/doctown-assembly/src/: api.rs  cluster.rs  context.rs  graph.rs  label.rs  lib.rs  packer.rs
crates/doctown-assembly/tests/: integration_test.rs
crates/doctown-common/: Cargo.toml
crates/doctown-common/src/: error.rs  ids.rs  lib.rs  types.rs
crates/doctown-docpack/: Cargo.toml  README.md
crates/doctown-docpack/src/: clusters.rs  embeddings.rs  graph.rs  lib.rs  manifest.rs  nodes.rs  reader.rs  source_map.rs  symbol_contexts.rs  writer.rs
crates/doctown-events/: Cargo.toml
crates/doctown-events/src/: assembly.rs  envelope.rs  ingest.rs  lib.rs
crates/doctown-events/src/snapshots/: doctown_events__envelope__tests__envelope_ingest_completed.snap  doctown_events__envelope__tests__envelope_ingest_started.snap  doctown_events__ingest__tests__ingest_chunk_created_payload.snap  doctown_events__ingest__tests__ingest_completed_failed_payload.snap  doctown_events__ingest__tests__ingest_completed_success_payload.snap  doctown_events__ingest__tests__ingest_file_detected_payload.snap  doctown_events__ingest__tests__ingest_file_skipped_payload.snap  doctown_events__ingest__tests__ingest_started_payload.snap
crates/doctown-ingest/: Cargo.toml
crates/doctown-ingest/examples/: m2_demo.rs
crates/doctown-ingest/src/: api.rs  archive.rs  calls.rs  chunk.rs  embedding.rs  filter.rs  github.rs  imports.rs  language.rs  lib.rs  parsing.rs  pipeline.rs  resolution.rs  symbol.rs  traversal.rs
crates/doctown-ingest/tests/: api_server.rs  call_detection.rs  error_handling.rs  pipeline_events.rs  streaming_behavior.rs
specs/: architecture.v1.md  docpack.md  events.v1.md  events.v1.schema.json
website/: .env.example  VERCEL_SETUP.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
website/src/: hooks.server.ts
website/src/lib/: api-client.ts  docpack.ts  sse-client.test.ts  sse-client.ts
website/src/lib/components/: DocpackCard.svelte  EnhancedSymbolList.svelte  EventLog.svelte  FileTree.svelte  FileTree.test.ts  RepoInput.svelte  StatsSummary.svelte  SymbolDetail.svelte  SymbolList.svelte  SymbolList.test.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/api/build-status/[jobId]/: +server.ts
website/src/routes/api/create-job/: +server.js
website/src/routes/api/job/[id]/: +server.js
website/src/routes/api/list-docpacks/: +server.ts
website/src/routes/api/submit-build/: +server.ts
website/src/routes/api/upload-docpack/: +server.ts
website/src/routes/commons/: +page.svelte
workers/embedding/: .env.gpu.example  .gitignore  Dockerfile  Dockerfile.gpu  QUICKSTART.md  README.md  build-gpu.sh  docker-compose.yml  pyproject.toml  run.sh  runpod_handler.py  setup.sh
workers/embedding/app/: __init__.py  config.py  events.py  main.py  model.py  schemas.py
workers/embedding/tests/: __init__.py  test_api.py  test_model.py
workers/generation/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  run.sh  setup.sh
workers/generation/app/: __init__.py  config.py  events.py  generator.py  main.py  openai_client.py  prompt_builder.py  schemas.py  token_counter.py
workers/generation/tests/: __init__.py  test_api.py  test_prompt_builder.py  test_token_counter.py
