[workspace]
resolver = "2"

members = [
    "crates/doctown-common",
    "crates/doctown-events",
    "crates/doctown-ingest",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/doctown/doctown"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
actix-web = "4"
actix-cors = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
url = "2"

# Async utilities
async-stream = "0.3"
futures-util = "0.3"

# Testing
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
