[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
actix-cors = "0.7"
async-stream = "0.3"
futures-util = "0.3"
