[package]
name = "doctown-assembly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "assembly-server"
path = "src/bin/assembly-server.rs"

[dependencies]
doctown-common = { path = "../doctown-common" }
doctown-events = { path = "../doctown-events" }
ndarray = "0.16"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
