[package]
name = "doctown-common"
description = "Shared types, errors, and utilities for Doctown"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
