[package]
name = "doctown-ingest"
description = "Ingest worker for Doctown - fetches repos, parses code, extracts symbols"
version.workspace = true
edition.workspace = true

[dependencies]
doctown-common = { path = "../doctown-common" }
doctown-events = { path = "../doctown-events" }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.0"
tree-sitter-tags = "0.22.6"
zip = "6.0.0"
walkdir = "2.5.0"
tempfile = "3.23.0"
tokio-util = "0.7.17"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3.23.0"
