[package]
name = "doctown-ingest"
description = "Ingest worker for Doctown - fetches repos, parses code, extracts symbols"
version.workspace = true
edition.workspace = true

[dependencies]
doctown-common = { path = "../doctown-common" }
doctown-events = { path = "../doctown-events" }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-tags = "0.25.10"
streaming-iterator = "0.1"
zip = "6.0.0"
walkdir = "2.5.0"
tempfile = "3.23.0"
tokio-util = "0.7.17"
sha2 = "0.10"
hex = "0.4"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3.23.0"
